<!--
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.ansiblemiddleware</groupId>
   <artifactId>amq-utils</artifactId>
   <packaging>jar</packaging>
   <name>A4MW utils for amq</name>
   <version>1.0.0</version>


   <properties>
      <maven.compiler.source>11</maven.compiler.source>
      <maven.compiler.target>11</maven.compiler.target>

      <retryTests>false</retryTests>
      <logging.config>log4j2-tests-config.properties</logging.config>
      <modular.jdk.surefire.arg>--add-modules java.sql,jdk.unsupported </modular.jdk.surefire.arg>

      <commons.config.version>2.9.0</commons.config.version>
      <commons.lang.version>3.12.0</commons.lang.version>
      <commons.beanutils.version>1.9.4</commons.beanutils.version>
      <commons.dbcp2.version>2.7.0</commons.dbcp2.version>
      <commons.pool2.version>2.7.0</commons.pool2.version>
      <commons.collections.version>3.2.2</commons.collections.version>
      <commons.text.version>1.10.0</commons.text.version>
      <commons.io.version>2.10.0</commons.io.version>
      <commons.codec.version>1.15</commons.codec.version>
      <caffeine.version>3.1.6</caffeine.version>
      <guava.version>32.0.1-jre</guava.version>
      <hawtio.version>2.15.0</hawtio.version>
      <jsr305.version>3.0.2</jsr305.version>
      <jetty.version>10.0.15</jetty.version>
      <jetty-servlet-api.version>4.0.6</jetty-servlet-api.version>
      <jgroups.version>5.2.16.Final</jgroups.version>
      <maven.bundle.plugin.version>5.1.9</maven.bundle.plugin.version>
      <maven.checkstyle.plugin.version>3.2.2</maven.checkstyle.plugin.version>
      <jib.maven.plugin.version>3.3.2</jib.maven.plugin.version>
      <checkstyle.version>10.11.0</checkstyle.version>
      <jctools.version>2.1.2</jctools.version>
      <netty.version>4.1.96.Final</netty.version>

      <!-- this is basically for tests -->
      <netty-tcnative-version>2.0.61.Final</netty-tcnative-version>
      <proton.version>0.34.1</proton.version>
      <slf4j.version>1.7.36</slf4j.version>
      <log4j.version>2.20.0</log4j.version>
      <qpid.jms.version>1.10.0</qpid.jms.version>
      <johnzon.version>1.2.21</johnzon.version>
      <hawtbuff.version>1.11</hawtbuff.version>
      <hawtdispatch.version>1.22</hawtdispatch.version>
      <picocli.version>4.7.5</picocli.version>
      <jline.version>3.23.0</jline.version>
      <jansi.version>2.4.0</jansi.version>
      <jakarta.activation-api.version>1.2.2</jakarta.activation-api.version>
      <jakarta.annotation-api.version>1.3.5</jakarta.annotation-api.version>
      <jakarta.ejb-api.version>3.2.6</jakarta.ejb-api.version>
      <jakarta.enterprise.cdi-api.version>2.0.2</jakarta.enterprise.cdi-api.version>
      <jakarta.inject-api.version>1.0.3</jakarta.inject-api.version>
      <jakarta.jms-api.version>2.0.3</jakarta.jms-api.version>
      <jakarta.json-api.version>1.1.6</jakarta.json-api.version>
      <jakarta.management.j2ee-api.version>1.1.4</jakarta.management.j2ee-api.version>
      <jakarta.resource-api.version>1.7.4</jakarta.resource-api.version>
      <jakarta.security.auth.message-api.version>1.1.3</jakarta.security.auth.message-api.version>
      <jakarta.transaction-api.version>1.3.3</jakarta.transaction-api.version>
      <jakarta.ws.rs-api.version>2.1.6</jakarta.ws.rs-api.version>
      <jakarta.xml.bind-api.version>2.3.3</jakarta.xml.bind-api.version>
      <weld.version>2.4.0.Final</weld.version>
      <arquillian-weld-embedded.version>2.0.0.Beta3</arquillian-weld-embedded.version>
      <owb.version>1.7.0</owb.version>
      <arquillian.version>1.1.11.Final</arquillian.version>
      <servicemix.json-1.1.spec.version>2.9.0</servicemix.json-1.1.spec.version>
      <version.org.jacoco>0.8.10</version.org.jacoco>
      <version.org.jacoco.plugin>0.8.10</version.org.jacoco.plugin>
      <version.micrometer>1.9.5</version.micrometer>
      <hamcrest.version>2.1</hamcrest.version>
      <junit.version>4.13.2</junit.version>
      <junit5.version>5.8.2</junit5.version>
      <surefire.version>2.22.2</surefire.version>
      <version.jaxb.runtime>2.3.3</version.jaxb.runtime>
      <paho.client.mqtt.version>1.2.5</paho.client.mqtt.version>
      <postgresql.version>42.4.3</postgresql.version>
      <testcontainers.version>1.17.6</testcontainers.version>
      <selenium.version>4.8.3</selenium.version>
      <exec-maven-plugin.version>3.0.0</exec-maven-plugin.version>
      <apache.httpcore.version>4.4.13</apache.httpcore.version>
      <apache.httpclient.version>4.5.13</apache.httpclient.version>

      <!-- for JakartaEE -->
      <version.batavia>1.0.10.Final</version.batavia>
      <jakarta.jms-api.version.alt>3.1.0</jakarta.jms-api.version.alt>
      <jakarta.transaction-api.version.alt>2.0.1</jakarta.transaction-api.version.alt>
      <jakarta.resource-api.version.alt>2.1.0</jakarta.resource-api.version.alt>

      <jackson.version>2.14.1</jackson.version>
      <jackson-databind.version>${jackson.version}</jackson-databind.version>

      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

      <netty-transport-native-epoll-classifier>linux-x86_64</netty-transport-native-epoll-classifier>
      <netty-transport-native-kqueue-classifier>osx-x86_64</netty-transport-native-kqueue-classifier>

   </properties>

   <dependencies>
     <dependency>
        <groupId>org.apache.activemq</groupId>
        <artifactId>artemis-commons</artifactId>
        <version>2.28.0</version>
      </dependency>
      <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
	      <version>${slf4j.version}</version>
      </dependency>
      <dependency>
         <groupId>io.netty</groupId>
	 <artifactId>netty-buffer</artifactId>
	 <version>${netty.version}</version>
      </dependency>
      <dependency>
         <groupId>io.netty</groupId>
	 <artifactId>netty-common</artifactId>
	 <version>${netty.version}</version>
      </dependency>
      <dependency>
         <groupId>commons-beanutils</groupId>
	 <artifactId>commons-beanutils</artifactId>
	 <version>${commons.beanutils.version}</version>
      </dependency>
   </dependencies>

   <profiles>
      <profile>
         <id>release</id>
         <build>
            <plugins>
               <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-javadoc-plugin</artifactId>
                  <configuration>
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                     <minmemory>128m</minmemory>
                     <maxmemory>512m</maxmemory>
                     <noindex>true</noindex>
                     <sourceFileIncludes>
                        <sourceFileInclude>**/org/apache/activemq/artemis/api/**/*.java</sourceFileInclude>
                     </sourceFileIncludes>
                  </configuration>
                  <executions>
                     <execution>
                        <id>javadocs</id>
                        <goals>
                           <goal>jar</goal>
                        </goals>
                     </execution>
                  </executions>
               </plugin>
            </plugins>
         </build>
      </profile>
   </profiles>

</project>
